--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,9 +10,9 @@ body{
 }
 
 .container{
-    max-width: 900px;
+    max-width: 700px;
     max-height: 900px;
-    // margin: 0 auto;
+    margin: 0 auto;
     text-align: center;
     padding: 90px 50px;
     flex: 1; 
