--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,13 @@ body {
 }
 
 .container {
-  max-width: 700px;
+  max-width: 500px;
   max-height: 900px;
   margin: 0 auto;
   text-align: center;
   padding: 90px 50px;
   flex: 1;
+  justify-content: center;
 }
 .container .header-img {
   width: 200px;
