--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,12 +10,13 @@ body{
 }
 
 .container{
-    max-width: 700px;
+    max-width: 500px;
     max-height: 900px;
     margin: 0 auto;
     text-align: center;
     padding: 90px 50px;
     flex: 1; 
+    justify-content: center;
     
     
 
