--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,28 +8,25 @@ body {
   justify-content: center;
 }
 
+header .logo {
+  width: 220px;
+  height: 140px;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+header h1 {
+  margin-top: 5px;
+  margin-left: 20px;
+}
+
 .container {
-  max-width: 500px;
-  max-height: 900px;
+  max-width: 50%;
+  max-height: 50%;
   margin: 0 auto;
   text-align: center;
   padding: 90px 50px;
   flex: 1;
   justify-content: center;
-}
-.container .header-img {
-  width: 200px;
-  height: 70px;
-}
-.container .h2left {
-  text-align: left;
-  font-family: Berkshire Swash;
-  font-size: 60px;
-}
-.container .h2right {
-  text-align: right;
-  font-family: Berkshire Swash;
-  font-size: 60px;
 }
 .container section {
   display: flex;
@@ -45,6 +42,7 @@ body {
   color: #0e0d0d;
   cursor: pointer;
   text-align: center;
+  margin-top: 80px;
 }
 .container section button .icon {
   margin-left: 5px;
@@ -57,17 +55,24 @@ body {
   padding: 10px;
   width: 100%;
   max-width: 479px;
+  box-shadow: 0 10px 20px 0px rgba(0, 0, 0, 0.15);
 }
-.container #quoteContainer blockquote {
+.container blockquote {
   font-family: Coming Soon;
   margin-top: 5px;
 }
-.container #quoteContainer img {
-  width: 60px;
-  height: 80px;
+.container img {
+  width: 100px;
+  height: 90px;
   margin-top: 30px;
 }
-.container #quoteContainer cite {
+.container .author-pic {
+  margin-bottom: 10px;
+  width: 90px;
+  height: 100px;
+  border-radius: 50%;
+}
+.container cite {
   font-family: Berkshire Swash;
   font-size: 18px;
   padding: 10px;
@@ -77,21 +82,37 @@ body {
 .footer {
   text-align: center;
   font-size: 14px;
-  padding: 10px;
-  bottom: 0;
+  padding-top: 150px;
 }
 
 @media (max-width: 767px) {
-  .header-img {
+  header .logo {
     width: 150px;
-    height: 50px;
+    height: 80px;
   }
-  .h2left,
-  .h2right {
-    font-size: 40px;
+  header h1 {
+    font-size: 25px;
+  }
+  .container {
+    max-width: none;
+  }
+  .container #quoteContainer {
+    padding: 5px;
+  }
+  #quoteContainer {
+    padding: 3px;
   }
   #quoteContainer blockquote {
     font-size: 15px;
+  }
+  #quoteContainer img {
+    width: 80px;
+    height: 70px;
+    margin-top: 15px;
+  }
+  #quoteContainer .author-pic {
+    width: 70px;
+    height: 75px;
   }
   #quoteContainer cite {
     font-size: 8px;
