--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,33 +9,27 @@ body{
     justify-content: center;
 }
 
+header{
+.logo{
+    width: 220px;
+    height: 140px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+h1{
+    margin-top: 5px;
+    margin-left: 20px;
+}
+}
 .container{
-    max-width: 500px;
-    max-height: 900px;
+    max-width: 50%;
+    max-height: 50%;
     margin: 0 auto;
     text-align: center;
     padding: 90px 50px;
     flex: 1; 
     justify-content: center;
-    
-    
 
-    .header-img{
-        width: 200px;
-        height: 70px;
-    }
-
-    .h2left{
-        text-align: left;
-        font-family: Berkshire Swash;
-        font-size: 60px;
-    }
-
-    .h2right{
-        text-align: right;
-        font-family: Berkshire Swash;
-        font-size: 60px;
-    }
 
     section{
         display: flex;
@@ -51,6 +45,7 @@ body{
             color: #0e0d0d;
             cursor: pointer;
             text-align: center;
+            margin-top: 80px;
     
             .icon{
                 margin-left: 5px;
@@ -67,18 +62,26 @@ body{
         padding: 10px;
         width: 100%;
         max-width: 479px;
+        box-shadow: 0 10px 20px 0px rgba(0, 0, 0, 0.15);
 
+    }
 
         blockquote{
             font-family:  Coming Soon;
             margin-top: 5px;
         }
         img{
-            width: 60px;
-            height: 80px;
+            width: 100px;
+            height: 90px;
             margin-top: 30px;
         }
 
+        .author-pic{
+            margin-bottom: 10px;
+            width: 90px;
+            height: 100px;
+            border-radius: 50%;
+        }
             cite{
                 font-family: Berkshire Swash;
                 font-size: 18px;
@@ -86,35 +89,54 @@ body{
                 margin-top: 50px;
             }
     }
-}
+
 
 
 .footer{
     text-align: center;
     font-size: 14px;
-    padding: 10px;
-    bottom: 0;
-
+    padding-top: 150px;
     }
 
 
 
 @media (max-width: 767px) {
 
-        .header-img {
+    header{
+        .logo {
         width: 150px;
-        height: 50px;
-        }
-    
-        .h2left,
-        .h2right {
-        font-size: 40px;
+        height: 80px;
         }
 
-        #quoteContainer{
+        h1{
+            font-size: 25px;
+        }
+    }
     
+
+    .container{
+        max-width: none;
+
+        #quoteContainer{
+            padding: 5px;
+        }
+    }
+
+        #quoteContainer{
+            padding: 3px;
             blockquote{
                 font-size: 15px;
+            }
+
+            img{
+                width: 80px;
+                height: 70px;
+                margin-top: 15px;
+            }
+
+            .author-pic{
+                width: 70px;
+                height: 75px;
             }
     
             cite{
